Enable testing on MacOS

--- a/PocketNurse/appsettings.Development.json
+++ b/PocketNurse/appsettings.Development.json
@@ -1,4 +1,9 @@
 ﻿{
+  "ConnectionStrings": {
+    "AuthorizationConnection": "Server=(localdb)\\mssqllocaldb;Database=Authorization;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection":  "Server=(localdb)\\mssqllocaldb;Database=PocketNurse;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PocketNurseContext": "Server=(localdb)\\mssqllocaldb;Database=PocketNurse;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
