Changed connection string in development appsettings.

--- a/PocketNurse/appsettings.Development.json
+++ b/PocketNurse/appsettings.Development.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "AuthorizationConnection": "Server=(localdb)\\mssqllocaldb;Database=Authorization;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection":  "Server=(localdb)\\mssqllocaldb;Database=PocketNurse;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PocketNurseContext": "Server=(localdb)\\mssqllocaldb;Database=PocketNurse;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthorizationConnection": "Server=mssql,1433;User Id=SA;Password=SqlDevOps2017;Database=Authorization;MultipleActiveResultSets=true",
+    "DefaultConnection":  "Server=mssql,1433;User Id=SA;Database=PocketNurse;Password=SqlDevOps2017;MultipleActiveResultSets=true",
+    "PocketNurseContext": "Server=mssql,1433;User Id=SA;Database=PocketNurse;Password=SqlDevOps2017;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
