--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.4'
 services:
-	mssql:
-		image: microsoft/mssql-server-linux:2017-latest
+  mssql:
+    image: microsoft/mssql-server-linux:2017-latest
     container_name: mssql
     ports:
       - "1433:1433"
     volumes:
       - sqlvolume:/var/opt/mssql
     environment:
-      SA_PASSWORD: "SqlDevOps2017"
+      SA_PASSWORD: "SqlPocketNurse"
       ACCEPT_EULA: "Y"
       MSSQL_PID: Developer
   pocketnurse:
