--- a/PocketNurse/appsettings.Docker.json
+++ b/PocketNurse/appsettings.Docker.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "AuthorizationConnection": "Server=mssql,1433;User Id=SA;Password=SqlDevOps2017;Database=Authorization;MultipleActiveResultSets=true",
-    "DefaultConnection":  "Server=mssql,1433;User Id=SA;Database=PocketNurse;Password=SqlDevOps2017;MultipleActiveResultSets=true",
-    "PocketNurseContext": "Server=mssql,1433;User Id=SA;Database=PocketNurse;Password=SqlDevOps2017;MultipleActiveResultSets=true"
+    "AuthorizationConnection": "Server=mssql,1433;User Id=SA;Password=PocketNurseMay271957;Database=Authorization;MultipleActiveResultSets=true",
+    "DefaultConnection":  "Server=mssql,1433;User Id=SA;Database=PocketNurse;Password=PocketNurseMay271957;MultipleActiveResultSets=true",
+    "PocketNurseContext": "Server=mssql,1433;User Id=SA;Database=PocketNurse;Password=PocketNurseMay271957;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
