--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - sqlvolume:/var/opt/mssql
     environment:
-      SA_PASSWORD: "SqlPocketNurse"
+      SA_PASSWORD: "PocketNurseMay271957"
       ACCEPT_EULA: "Y"
       MSSQL_PID: Developer
   pocketnurse:
